# EDL-MON-02

./: README.md
CAD_files/: Dustbin Plate v1.step  Dustbin v2.step  Water Container v1.step  blower_3d.step  brush v2.step  readme_cad.md  top_cover_sketch.step
KICAD_files/: Readme.md  _autosave-pcb_design.kicad_prl  _autosave-pcb_design.kicad_pro  pcb_design.kicad_pcb  pcb_design.kicad_prl  pcb_design.kicad_pro  pcb_design.kicad_sch  pcb_design.kicad_sch-bak  readme_kicad.md
Milestone/: P-21-MON-02-M1.xlsx  Readme.md
Simulation/: Node2D.gd  Readme.md  dust.gd  dust.tscn  project.godot  vaccum.gd  world.tscn
Simulation/Blocks/: blobLeft.png.import  blobRight.png.import  blueOrb.png.import  caveBlock.png.import  coin.png.import  darkDirtBlock.png.import  darkGrassDirtBlock.png.import  darkSkyBlock.png.import  darkStoneBlock.png.import  dirtBlock.png.import  forestBlock.png.import  grassDirtBlock.png.import  heart.png.import  iceBlock.png.import  iceBlockTop.png.import  iceDirtBlock.png.import  iceStonePathBlock.png.import  leavesBlock.png.import  purpleBlock.png.import  rock.png.import  roots.png.import  sandBlock.png.import  skyBlock.png.import  spikes.png.import  spriteSheet.png.import  stoneBlock.png.import  stonePathBlock.png.import  waterBlock.png.import  waterTopBlock.png.import
Tests/: Readme.md
code/mapping_algo/: main.c  motor.h  pico_pins.h
code/motor_control/: main.c  motor.h  pico_pins.h
code/motor_encoder/: CMakeLists.txt  main.c
code/ultrasonic_sensor/: CMakeLists.txt  main.c
code/ultrasonic_sensor_with interupt/: main.c
(+22 files in other folders)
